--- a/ShelterMap/app/src/main/res/menu/mymenu.xml
+++ b/ShelterMap/app/src/main/res/menu/mymenu.xml
@@ -1,6 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/search"
+        android:title=""
+        app:showAsAction="always"
+        android:iconTint="@color/text_icon"
+        android:icon="@drawable/ic_action_search"
+        />
+    <item
+        android:id="@+id/map2"
+        android:title=""
+        app:showAsAction="always"
+        android:iconTint="@color/text_icon"
+        android:icon="@drawable/ic_action_map"
+        />
+    <item
         android:id="@+id/mybutton"
         android:title=""
         app:showAsAction="always"
